--- a/arn_cph.html
+++ b/arn_cph.html
@@ -415,28 +415,4 @@
 <input type="hidden" id="activateCookieDisabledBox" value="false">
 <input type="hidden" id="activateCookieDisclaimer" value="false">
 <input type="hidden" id="abandonedBasketMaxItemsInBasket" value="20">
-
-<script data-savepage-type="text/javascript" type="text/plain" data-savepage-src="/resourceipr/script-bundle/layoutConfig.js?v=X7iiclmNyG5AmREmpWEfSQtG7Dxapkjzsqjjou33Qn41" defer=""></script>
-
-
-    <script data-savepage-type="" type="text/plain"></script>
-
-    
-
-    <script async="" id="e11233f1926a" data-savepage-type="text/javascript" type="text/plain"></script>
-        <div id="localStorageMarketingKeys" hidden="" data-local-storage-marketing-keys="[&quot;ngStorage-abandonedBasket&quot;,&quot;ngStorage-preferredOriginAirportCode&quot;]"></div>
-<script data-savepage-type="text/javascript" type="text/plain" data-savepage-src="/resourceipr/script-bundle/cookie-consent?v=dQnzOxFicDZISsuOdvKNCXFYi711Cw4ERMrwEOJ7DSE1" defer=""></script>
-<script data-savepage-type="text/javascript" type="text/plain"></script><script data-savepage-type="" type="text/plain" defer="" data-savepage-src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon="{&quot;rayId&quot;:&quot;6fe80cd94c4a991e&quot;,&quot;token&quot;:&quot;041e2536c3754520abacd58665adfd2f&quot;,&quot;version&quot;:&quot;2021.12.0&quot;,&quot;si&quot;:100}" crossorigin="anonymous"></script>
-
-
-<iframe sandbox="allow-scripts" srcdoc="<html><head><base href=&quot;https://a17202440929.cdn.optimizely.com/client_storage/a17202440929.html&quot;><script data-savepage-type=&quot;&quot; type=&quot;text/plain&quot;></script>
-<style id=&quot;savepage-cssvariables&quot;>
-  :root {
-  }
-</style>
-        </head><body></body></html>" data-savepage-crossorigin="" data-savepage-src="https://a17202440929.cdn.optimizely.com/client_storage/a17202440929.html" src="" hidden="" tabindex="-1" title="Optimizely Internal Frame" height="0" width="0" style="display: none;" data-savepage-key="0-0"></iframe><script data-savepage-type="text/javascript" type="text/plain" id=""></script><script data-savepage-type="text/javascript" type="text/plain" id=""></script><script data-savepage-type="text/javascript" type="text/plain" id=""></script><script data-savepage-type="text/javascript" type="text/plain" id=""></script><script data-savepage-type="text/javascript" type="text/plain" id=""></script><script data-savepage-type="text/javascript" type="text/plain" id=""></script><iframe sandbox="allow-scripts" srcdoc="<!DOCTYPE html><html lang=&quot;en&quot;><head><base href=&quot;https://vars.hotjar.com/box-4924254a9ce4dc9b959b6e4a9b662d60.html&quot;><meta charset=&quot;UTF-8&quot;>
-<style id=&quot;savepage-cssvariables&quot;>
-  :root {
-  }
-</style>
-        </head><body><script data-savepage-type=&quot;&quot; type=&quot;text/plain&quot;></script></body></html>" data-savepage-crossorigin="" name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" data-savepage-src="https://vars.hotjar.com/box-4924254a9ce4dc9b959b6e4a9b662d60.html" src="" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;" data-savepage-key="0-1"></iframe><script data-savepage-type="text/javascript" type="text/plain" id=""></script><script data-savepage-type="text/javascript" type="text/plain" id=""></script><script data-savepage-type="text/javascript" type="text/plain" id=""></script></body></html>
+</body></html>
